@@ -886,7 +886,7 @@ main (argc, argv)
   md_end ();
 #endif
 
-  /* If we've been collecting dwarf2 .debug_line info, either for 
+  /* If we've been collecting dwarf2 .debug_line info, either for
      assembly debugging or on behalf of the compiler, emit it now.  */
   dwarf2_finish ();
 
