@@ -1,3 +1,11 @@
+2001-01-23  Kazu Hirata  <kazu@hxi.com>
+
+	* as.c: Fix formatting.
+	* ehopt.c: Likewise.
+	* messages.c: Likewise.
+	* stabs.c: Likewise.
+	* symbols.c: Likewise.
+
 2001-01-23  Ben Elliston  <bje@redhat.com>
 
 	* config/tc-m32r.c (m32r_handle_align): Declare type of fragp.
